# car_event_tracker

./: .env.example  .env.production.example  .gitignore  AGENTS.md  DEPLOYMENT.md  docker-compose.prod.yml  docker-compose.yml  refference_design.html
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_user_profile_fields.py  003_make_subscription_channels_nullable.py  004_add_is_all_day_to_events.py  005_add_saved_events.py  006_add_calendar_feed_token.py  007_add_platform_settings.py
backend/app/: celery_app.py  cli.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/models/: base.py  event.py  notification.py  organiser_request.py  platform_setting.py  saved_event.py  subscription.py  user.py
backend/app/schemas/: auth.py  event.py  notification.py  organiser_request.py  saved_event.py  stats.py  subscription.py
backend/app/services/: auth.py  calendar.py  event.py  notification.py  oauth.py  organiser_request.py  saved_event.py  stats.py  subscription.py
backend/app/tasks/: notifications.py
backend/app/utils/: geo.py  security.py
backend/tests/: conftest.py  test_health.py
backend/tests/test_api/: test_auth.py  test_events.py  test_events_geo.py  test_notifications.py  test_oauth.py  test_organiser_requests.py  test_subscriptions.py
backend/tests/test_services/: test_auth.py  test_calendar.py  test_notification.py  test_subscription.py
backend/tests/test_tasks/: test_notifications.py
backend/tests/test_utils/: test_geo.py  (+1 more)
(+72 files in other folders)
